[package]
name = "minestom-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Minestom Minecraft server"
license = "MIT"

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
thiserror = "1.0"
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
log = "0.4.27"
env_logger = "0.10"
once_cell = "1.19"
