[package]
name = "example-server"
version = "0.1.0"
edition = "2024"

[dependencies]
minestom-rs = { path = ".." }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
log = "0.4"
env_logger = "0.10"
jni = "0.21" 
thiserror = "1.0"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
once_cell = "1.19"
arraydeque = "0.5.1"
rand = "0.9.1"
image = "0.25.6"
base64 = "0.22.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
name = "minestom"
crate-type = ["cdylib"] 
