[workspace]
resolver = "3"
members = [
  "crates/thecrown-advancements",
  "crates/thecrown-auth",
  "crates/thecrown-commands",
  "crates/thecrown-common", "crates/thecrown-components",
  "crates/thecrown-config",
  "crates/thecrown-database",
  "crates/thecrown-lobby",
  "crates/thecrown-mcserver",
  "crates/thecrown-models",
  "crates/thecrown-parkour",
  "crates/thecrown-protocol",
  "crates/thecrown-relay",
  "crates/thecrown-website",
]

[workspace.dependencies]
minestom = { path = "../minestom-rs" }
world-seed-entity-engine = { path = "../world-seed-entity-engine-rs" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "full"] }
log = "0.4"
env_logger = "0.10"
jni = "0.21" 
thiserror = "1.0"
uuid = { version = "1.16", features = ["serde", "v4"] }
anyhow = "1.0.98"
rand = "0.9.1"
image = "0.25.6"
base64 = "0.22.1"
async-nats = "0.34.0"
futures = "0.3.30"
serde = "1.0.202"
serde_cbor = "0.11.2"
toml = "0.8.13"
reqwest = { version = "0.12.5", features = ["json"] }
parking_lot = "0.12"
async-trait = "0.1"
once_cell = "1.19"
arraydeque = "0.5.1"
serde_json = "1.0.140"
chrono = "0.4.41"
serde_derive = "1.0.200"
