[package]
name = "thecrown-auth"
version = "0.1.0"
edition = "2024"

[lib]
name = "minestom"
crate-type = ["cdylib"] 

[dependencies]
thecrown-common = { path = "../thecrown-common" }
thecrown-protocol = { path = "../thecrown-protocol" }
minestom = { path = "../../../minestom-rs" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "full"] }
log = "0.4"
env_logger = "0.10"
jni = "0.21" 
thiserror = "1.0"
uuid = { version = "1.16", features = ["serde", "v4"] }
anyhow = "1.0.98"