[package]
name = "thecrown-auth"
version = "0.1.0"
edition = "2024"

[lib]
name = "auth"
crate-type = ["cdylib"] 

[dependencies]
thecrown-common = { path = "../thecrown-common" }
thecrown-protocol = { path = "../thecrown-protocol" }
minestom = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
jni  = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }