[package]
name = "thecrown-common"
version = "0.1.0"
edition = "2024"

[dependencies]
thecrown-protocol = { path = "../thecrown-protocol" }
async-nats = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
minestom = { workspace = true }
jni = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }