[package]
name = "thecrown-mcserver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "minestom"
crate-type = ["cdylib"] 

[dependencies]
thecrown-common = { path = "../thecrown-common" }
thecrown-protocol = { path = "../thecrown-protocol" }
minestom = { path = "../../../minestom-rs" }
world-seed-entity-engine = { path = "../../../world-seed-entity-engine-rs" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "full"] }
log = "0.4"
env_logger = "0.10"
jni = "0.21" 
thiserror = "1.0"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
once_cell = "1.19"
arraydeque = "0.5.1"
rand = "0.9.1"
image = "0.25.6"
base64 = "0.22.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-nats = "0.42.0"
serde_cbor = "0.11.2"
anyhow = "1.0.98"
chrono = "0.4.41"

[build-dependencies]
walkdir = "2.5.0"
zip = "4.0"
sha1 = "0.10.6"
