[package]
name = "thecrown-mcserver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "minestom"
crate-type = ["cdylib"] 

[dependencies]
thecrown-common = { path = "../thecrown-common" }
thecrown-models = { path = "../thecrown-models" }
thecrown-protocol = { path = "../thecrown-protocol" }
thecrown-advancements = { path = "../thecrown-advancements" }
thecrown-parkour = { path = "../thecrown-parkour" }
thecrown-lobby = { path = "../thecrown-lobby" }
thecrown-commands = { path = "../thecrown-commands" }
thecrown-components = { path = "../thecrown-components" }
world-seed-entity-engine = { workspace = true }
minestom = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
jni = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
arraydeque = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
serde_cbor = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
walkdir = "2.5.0"
zip = "4.0"
sha1 = "0.10.6"
