[package]
name = "thecrown-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
thecrown-common = { path = "../thecrown-common" }
thecrown-protocol = { path = "../thecrown-protocol" }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
jni = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
serde_cbor = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }